see-more-btn-projetcts

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -127,12 +128,21 @@ header nav a {
 }
 #home article .triangle {
   position: absolute;
+  transition: transform 0.3s ease;
   bottom: -200px;
+}
+#home article .triangle:hover {
+  animation: afastar-esquerda 0.3s ease; /* Inicia a animação ao passar o mouse */
+  transform-origin: right; /* Define o ponto de origem da transformação */
 }
 #home article .dark-triangle {
   position: absolute;
   bottom: -200px;
   left: -60px;
+}
+#home article .dark-triangle:hover {
+  animation: afastar-direita 0.3s ease;
+  transform-origin: left;
 }
 #home article div {
   display: flex;
@@ -263,6 +273,16 @@ header nav a {
   flex-direction: column;
   position: absolute;
 }
+.stacks-section .container-shapes .yellow-triangle {
+  animation: mover 7s infinite;
+}
+.stacks-section .container-shapes .yellow-triangle:hover {
+  animation: afastar-esquerda 0.3s ease; /* Inicia a animação ao passar o mouse */
+  transform-origin: right; /* Define o ponto de origem da transformação */
+}
+.stacks-section .container-shapes .yellow-triangle:hover::before {
+  transform: translateX(-50px); /* Desloca o pseudo-elemento para a esquerda */
+}
 .stacks-section .container-stacks {
   display: flex;
   flex-direction: column;
@@ -301,6 +321,18 @@ header nav a {
 
 .projects {
   padding: 0 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.projects #see-more {
+  background-color: #FCBF49;
+  border: none;
+  color: #FFFCF8;
+  padding: 10px;
+  border-radius: 7px;
+  cursor: pointer;
 }
 .projects .projects-container {
   display: flex;
@@ -331,6 +363,26 @@ header nav a {
   align-items: center;
   gap: 30px;
   position: relative;
+}
+.projects .projects-container .wrap-projects #hide-content {
+  margin-top: -30px;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease, opacity 0.5s ease;
+}
+.projects .projects-container .wrap-projects #hide-content .container-project {
+  margin-top: 30px;
+  padding: 50px;
+}
+.projects .projects-container .wrap-projects #hide-content.show {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  max-height: 5000px; /* Ajuste conforme necessário para acomodar o conteúdo */
+  opacity: 1;
 }
 .projects .projects-container .wrap-projects .container-project {
   position: relative;
@@ -518,6 +570,44 @@ footer .development {
   font-style: italic;
 }
 
+@keyframes afastar-esquerda {
+  0% {
+    transform: translateX(0); /* Estado inicial: sem deslocamento */
+  }
+  100% {
+    transform: translateX(-40px); /* Desloca 20px para a esquerda */
+  }
+}
+@keyframes afastar-direita {
+  0% {
+    transform: translateX(0); /* Estado inicial: sem deslocamento */
+  }
+  100% {
+    transform: translateX(20px); /* Desloca 20px para a esquerda */
+  }
+}
+@keyframes mover {
+  0% {
+    left: 0;
+    top: 0;
+    transform: translate(0, 0);
+  }
+  25% {
+    left: 50px;
+    top: 0;
+    transform: translate(50px, 0);
+  }
+  50% {
+    left: calc(100% - 50px);
+    top: calc(100% - 50px);
+    transform: translate(0, 100px);
+  }
+  100% {
+    left: 0;
+    top: 0;
+    transform: translate(0, 0);
+  }
+}
 @media screen and (max-width: 1017px) {
   .social-medias-mobile div {
     margin-bottom: 10px;
