--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,34 @@
-@import './variables';
+:root {
+    --white: #FFFCF8;
+    --red: #D62828;
+    --yellow: #FCBF49;
+    --lightGray: #DFDEDD;
+    --gray: #423F3F;
+    --black: #1C1311;
+    --orange: #F77F00;
+}
+
+.dark-mode:root {
+    --white: #060A2F;
+    --red: #2f2f2f;
+    --yellow: #ff9748;
+    --lightGray: #DFDEDD;
+    --gray: #423F3F;
+    --black: #FFFCF8;
+    --orange: #F77F00;
+
+}
+
+.cta.active {
+    &::before{
+        background-color: #060A2F;
+        opacity: 1;
+    }
+}
+
+.txt-cta.active {
+    color: #fff;
+}
 
 @mixin DisplayFlex($direction, $justify, $align) {
     display: flex;
@@ -21,11 +51,22 @@ h2,
 h3,
 h4,
 a {
-    color: $black;
+    color: var(--black);
+}
+
+button,
+a {
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+
+    &:hover {
+        transform: scale(1.1);
+    }
 }
 
 .hamburguer,
-.mobile-header, .info-mobile {
+.mobile-header,
+.info-mobile {
     display: none;
 }
 
@@ -44,7 +85,7 @@ a {
 }
 
 .span-subtitle {
-    color: $lightGray;
+    color: var(--lightGray);
     font-weight: 300;
     font-size: clamp(1em, 1em + 1.5vw, 2.5em);
 }
@@ -53,8 +94,8 @@ a {
     border-radius: 50%;
     border: none;
     padding: 20px 5px;
-    color: $lightGray ;
-    background: $white;
+    color: var(--lightGray);
+    background: var(--white);
     box-shadow: 0px 4px 4px 0px #00000040;
     font-weight: 800;
     font-size: 20px;
@@ -64,7 +105,7 @@ body,
 html {
     width: 100vw;
     scroll-behavior: smooth;
-    background: $white;
+    background: var(--white);
     overflow-x: hidden;
 }
 
@@ -72,10 +113,22 @@ header {
     @include DisplayFlex(row, space-between, center);
     width: 100%;
     padding: 20px 20%;
-
     position: fixed;
     z-index: 200;
-    background-color: rgba(255, 253, 250, 0.9);
+    background-color: transparent;
+
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: var(--white); // A cor de fundo desejada
+        opacity: 0.9; // A opacidade desejada
+        z-index: -1; // Coloca o pseudo-elemento atrás do conteúdo do header
+    }
 
 
     div {
@@ -97,10 +150,9 @@ header {
     }
 }
 
+
 #home {
     position: relative;
-
- 
 
     .background-images {
         position: absolute;
@@ -109,7 +161,7 @@ header {
         width: 100%;
         height: 100%;
         z-index: -1;
-    
+
 
     }
 
@@ -123,7 +175,7 @@ header {
         }
     }
 
-   
+
 
 
     article {
@@ -132,25 +184,29 @@ header {
         margin-top: 90px;
         position: relative;
 
-        .triangle{
+        .triangle {
             position: absolute;
             transition: transform 0.3s ease;
             bottom: -200px;
+            animation: spin 6s linear infinite;
 
             &:hover {
-                animation: afastar-esquerda 0.3s ease; /* Inicia a animação ao passar o mouse */
-                transform-origin: right; /* Define o ponto de origem da transformação */
-              }
+                // animation: afastar-esquerda 0.3s ease;
+                // transform-origin: right;
+                animation-play-state: paused;
+
+            }
         }
-        
-        .dark-triangle{
+
+        .dark-triangle {
             position: absolute;
             bottom: -200px;
             left: -60px;
 
-            &:hover{
-                animation: afastar-direita 0.3s ease;
-                transform-origin: left;
+            animation: spin-oposite 8s linear infinite;
+
+            &:hover {
+                animation-play-state: paused;
 
             }
         }
@@ -188,25 +244,55 @@ header {
             font-weight: 800;
 
             span {
-                color: $red;
+                color: var(--red);
 
             }
         }
     }
 }
 
+.dark-modes {
+    .main-container {
+        h1 {
+            color: pink;
+        }
+    }
+}
 
 
 .cta {
+    border-radius: 10px;
     margin: 0 20%;
     @include DisplayFlex(row, center, start);
-    background-color: #FCBF490D;
     padding: 20px 0;
     margin-top: -50px;
     position: relative;
+    z-index: 2; 
+    
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: var(--yellow); 
+        opacity: 0.5; 
+        z-index: -1; 
+        border-radius: 10px;
+    }
 
     .lamp {
         margin-right: 50px;
+        cursor: pointer;
+        padding-left: 10px;
+        transition: transform 0.1s ease-in-out;
+
+        &:hover{
+            animation: shake-animation 1.5s ease-in-out;
+        }
+
     }
 
     .dark-triangle {
@@ -222,7 +308,10 @@ header {
         h1 {
             text-align: end;
             font-size: clamp(1em, 1em + 1.5vw, 2.5em);
-            color: $yellow;
+            color: var(--yellow);
+    
+    }
+         
         }
 
         p {
@@ -238,7 +327,7 @@ header {
             @extend .btn-component;
         }
     }
-}
+
 
 .about-me {
     padding: 0 10%;
@@ -259,7 +348,7 @@ header {
         .image-about-me {
             width: min(90%, 600px);
             border-radius: 10px;
-            border: 2px solid $white;
+            border: 2px solid var(--white);
             margin-left: -10%;
 
         }
@@ -281,13 +370,15 @@ header {
 
             p {
                 max-width: 500px;
+
+         
             }
 
             button {
                 @extend .btn-component;
                 border: none;
-                background-color: $red;
-                color: $white;
+                background-color: var(--red);
+                color: var(--white);
                 margin-top: 30px;
             }
 
@@ -315,19 +406,24 @@ header {
         display: flex;
         flex-direction: column;
         position: absolute;
-       
-        .yellow-triangle{
+
+        .yellow-triangle {
             animation: mover 7s infinite;
+            
 
             &:hover {
-                animation: afastar-esquerda 0.3s ease; /* Inicia a animação ao passar o mouse */
-                transform-origin: right; /* Define o ponto de origem da transformação */
-              }
-
-              &:hover::before {
-                transform: translateX(-50px); /* Desloca o pseudo-elemento para a esquerda */
-              }
+               animation-play-state: paused;
+            }
         }
+
+        .triangle{
+            animation: spin 30s infinite;
+        }
+
+        .dark-triangle{
+            animation: spin-oposite 20s infinite;
+        }
+
 
     }
 
@@ -361,7 +457,7 @@ header {
                 span {
                     box-shadow: 0px 4px 4px 0px #00000040;
                     padding: 10px 20px;
-                    color: $gray;
+                    color: var(--gray);
                     font-weight: 300;
                     opacity: 0.7;
 
@@ -371,14 +467,15 @@ header {
     }
 }
 
+
 .projects {
     padding: 0 20%;
     @include DisplayFlex(column, center, center);
 
-    #see-more{
-        background-color: $yellow;
+    #see-more {
+        background-color: var(--yellow);
         border: none;
-        color: $white;
+        color: var(--white);
         padding: 10px;
         border-radius: 7px;
         cursor: pointer;
@@ -409,8 +506,8 @@ header {
             @include DisplayFlex(column, center, center);
             gap: 30px;
 
-            #hide-content{
-             
+            #hide-content {
+
                 margin-top: -30px;
                 max-height: 0;
                 opacity: 0;
@@ -418,16 +515,18 @@ header {
                 transition: max-height 0.5s ease, opacity 0.5s ease;
 
 
-                .container-project{   
+                .container-project {
                     margin-top: 30px;
                     padding: 50px;
-                }   
+                }
 
             }
-            #hide-content.show{
+
+            #hide-content.show {
                 @include DisplayFlex(column, center, center);
                 width: 100vw;
-                max-height: 5000px; /* Ajuste conforme necessário para acomodar o conteúdo */
+                max-height: 5000px;
+                /* Ajuste conforme necessário para acomodar o conteúdo */
 
                 opacity: 1;
             }
@@ -442,6 +541,7 @@ header {
                 top: 0;
                 right: 0;
                 margin-right: -20px;
+                animation: spin 6s linear infinite;
             }
 
             position: relative;
@@ -461,6 +561,8 @@ header {
                     top: 0;
                     margin-top: -30px;
                     margin-right: -40px;
+                    animation: spin-oposite 10s linear infinite;
+               
 
                 }
 
@@ -470,6 +572,7 @@ header {
                     top: 0;
                     right: 0;
                     width: 250px;
+                    
                 }
 
                 .circles-shape {
@@ -479,6 +582,7 @@ header {
                     right: 0;
                     margin-right: -40px;
                     width: 200px;
+                    animation: spin 6s linear infinite;
                 }
 
 
@@ -511,7 +615,7 @@ header {
 
                         a {
                             @extend .btn-component;
-                            background-color: $white;
+                            background-color: var(--white);
                         }
                     }
                 }
@@ -559,15 +663,15 @@ header {
             input::placeholder,
             textarea::placeholder {
                 font-style: italic;
-                color: $gray;
+                color: var(--gray);
                 opacity: 0.6;
             }
 
             input[type="submit"] {
-                background-color: $yellow;
+                background-color: var(--yellow);
                 width: min(50%, 130px);
 
-                color: $black;
+                color: var(--black);
                 font-weight: 800;
                 text-align: start;
                 padding-left: 10px;
@@ -618,7 +722,7 @@ header {
 
 
 footer {
-    background-color: $red;
+    background-color: var(--red);
     @include DisplayFlex(column, center, center);
     gap: 5px;
     width: 100% !important;
@@ -630,51 +734,93 @@ footer {
     }
 
 }
-// ANIMATIONS
+
+// ANIMAÇÕES
+
+@keyframes shake-animation {
+    0%, 100% { transform: translateX(0); }
+    10%, 30%, 50%, 70%, 90% { transform: translateX(-10px); }
+    20%, 40%, 60%, 80% { transform: translateX(10px); }
+}
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes spin-oposite {
+    from {
+        transform: rotate(360deg);
+    }
+
+    to {
+        transform: rotate(0deg);
+    }
+}
+
 
 
 @keyframes afastar-esquerda {
     0% {
-      transform: translateX(0); /* Estado inicial: sem deslocamento */
+        transform: translateX(0);
     }
-    100% {
-      transform: translateX(-40px); /* Desloca 20px para a esquerda */
-    }
-  }
 
-  @keyframes afastar-direita {
-    0% {
-      transform: translateX(0); /* Estado inicial: sem deslocamento */
-    }
     100% {
-      transform: translateX(20px); /* Desloca 20px para a esquerda */
+        transform: translateX(-40px);
     }
-  }
+}
 
-  @keyframes mover {
+@keyframes afastar-direita {
     0% {
-      left: 0;
-      top: 0;
-      transform: translate(0, 0);
+        transform: translateX(0);
     }
+
+    100% {
+        transform: translateX(20px);
+    }
+}
+
+@keyframes mover {
+    0% {
+        left: 0;
+        top: 0;
+        transform: translate(0, 0);
+    }
+
     25% {
-      left: 50px;
-      top: 0;
-      transform: translate(50px, 0);
+        left: 50px;
+        top: 0;
+        transform: translate(50px, 0);
     }
-    50% {
-      left: calc(100% - 50px);
-      top: calc(100% - 50px);
-      transform: translate(0, 100px);
-    }
-   
-    100% {
-      left: 0;
-      top: 0;
-      transform: translate(0, 0);
-    }
-  }
 
+    50% {
+        left: calc(100% - 50px);
+        top: calc(100% - 50px);
+        transform: translate(0, 100px);
+    }
+
+    100% {
+        left: 0;
+        top: 0;
+        transform: translate(0, 0);
+    }
+}
+ 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 
 @media screen and (max-width:1017px) {
 
@@ -682,10 +828,11 @@ footer {
         margin-bottom: 10px;
     }
 
-    .info-mobile{
+    .info-mobile {
         display: block;
         @include DisplayFlex(row !important, center !important, center !important);
-        .language-btn{
+
+        .language-btn {
             border-radius: 10px;
             padding: 10px;
             font-size: 15px;
@@ -700,16 +847,23 @@ footer {
 
     header {
         background-color: transparent;
+
+        &::before {
+            background-color: transparent;
+        }
+
     }
 
     #home {
 
-        .triangle{
+        .triangle {
             display: none;
         }
-        .container-home{
-            margin-top: 30px; 
+
+        .container-home {
+            margin-top: 30px;
         }
+
         article {
             @include DisplayFlex(column !important, center !important, center !important);
 
@@ -739,13 +893,21 @@ footer {
 
     .cta {
         margin-top: 40px !important;
+
+
         .main-container {
             flex-direction: column !important;
             gap: 20px;
         }
+
         .lamp {
+         
             margin-right: 0px !important;
+            cursor: pointer;
+       
+
         }
+
         a {
             text-align: center;
             padding: 12px !important;
@@ -818,21 +980,10 @@ footer {
         align-items: start;
         padding-left: 20px;
     }
-    .nav-menu.active a{
+
+    .nav-menu.active a {
         animation: fadeIn 0.5s ease forwards;
     }
-
-    @keyframes fadeIn {
-        0% {
-            opacity: 0;
-            transform: translateY(-20px);
-        }
-        100% {
-            opacity: 1;
-            transform: translateY(0);
-        }
-    }
-    
 
     .nav-info {
         display: none;
@@ -873,7 +1024,7 @@ footer {
     .cta {
         margin: 0 auto;
         width: 80%;
-        border: 1px solid $lightGray;
+        border: 1px solid var(--lightGray);
         box-shadow: 0px 4px 4px 0px #00000040;
         border-radius: 10px;
         padding: 25px;
@@ -919,7 +1070,6 @@ footer {
 
                 }
             }
-
         }
 
         .mockup {
