--- a/styles/index.scss
+++ b/styles/index.scss
@@ -630,6 +630,8 @@ header {
 }
 
 .contact {
+    position: relative;
+    @include DisplayFlex(row, center, center);
     .container-contact {
         z-index: 2;
         position: relative;
@@ -637,7 +639,20 @@ header {
         @include DisplayFlex(row, center, center);
         gap: 30px;
 
+        // #popup {
+        //     display: none;
+        //     position: fixed;
+        //     top: 50%;
+        //     left: 50%;
+        //     transform: translate(-50%, -50%);
+        //     background-color: #f8f8f8;
+        //     padding: 20px;
+        //     border: 1px solid #ccc;
+        //     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        //     z-index: 1000;
+        // }
         form {
+
             @include DisplayFlex(column, start, start);
             width: min(60vw, 400px);
             gap: 40px;
@@ -670,7 +685,7 @@ header {
             input[type="submit"] {
                 background-color: var(--yellow);
                 width: min(50%, 130px);
-
+                cursor: pointer;
                 color: var(--black);
                 font-weight: 800;
                 text-align: start;
