--- a/styles/index.scss
+++ b/styles/index.scss
@@ -101,6 +101,7 @@ a {
     box-shadow: 0px 4px 4px 0px #00000040;
     font-weight: 800;
     font-size: 20px;
+    border: 0.3px solid white;
 }
 
 body,
@@ -112,11 +113,12 @@ html {
 }
 
 header {
-    @include DisplayFlex(row, space-between, center);
+    @include DisplayFlex(row, center, center);
     width: 100%;
     padding: 20px 20%;
     position: fixed;
     z-index: 200;
+    gap: 10%;
     background-color: transparent;
 
 
@@ -136,10 +138,6 @@ header {
     div {
         @include DisplayFlex(row, center, center);
         gap: 15px;
-
-        img {
-            margin-top: 10px;
-        }
     }
 
     nav {
@@ -148,7 +146,10 @@ header {
 
         a {
             font-weight: 500;
-            
+        }
+
+        .container-lang{
+            @include DisplayFlex(row, center, center);
         }
     }
 
@@ -453,18 +454,35 @@ header {
             gap: 10%;
             padding: 30px;
 
+            .github-stack{
+                background-color: white;
+                border-radius: 10px;
+
+            }
             .block-stack {
                 @include DisplayFlex(column, center, center);
 
                 z-index: 5;
                 margin-top: 25px;
 
+                img{
+                    transition: transform 0.2s ease-in-out;
+                    &:hover{
+                        transform: scale(1.3);
+                    }
+                }
+
                 span {
                     box-shadow: 0px 4px 4px 0px #00000040;
+                    transition: transform 0.3s ease-in-out;
                     padding: 10px 20px;
                     color: var(--gray);
                     font-weight: 300;
                     opacity: 0.7;
+
+                    &:hover{
+                        transform: scale(1.3);
+                    }
 
                 }
             }
@@ -710,6 +728,7 @@ header {
                 padding-left: 10px;
                 font-size: 20px;
                 border-radius: 5px;
+                padding-right: 110px;
             }
         }
 
@@ -859,7 +878,16 @@ footer {
     }
 }
 
-@media screen and (max-width:1017px) {
+@media screen and (max-width:1050px) {
+    nav { 
+        a {
+            color: #060A2F;
+        }
+    }
+
+    .github, .eye{
+        padding: 0;
+    }
 
     .social-medias-mobile div {
         margin-bottom: 10px;
@@ -1023,7 +1051,7 @@ footer {
     }
 
     .nav-info {
-        display: none;
+       display: none;
     }
 
     .nav-info.active {
