--- a/styles/index.scss
+++ b/styles/index.scss
@@ -887,7 +887,8 @@ footer {
     }
 
     .github, .eye{
-        padding: 0;
+        padding: 2px;
+        border-radius: 20px;
     }
 
     .social-medias-mobile div {
